tests/errors/error_type_multiply.nimmy
# Error: Cannot multiply incompatible types
let x = "hello" * "world"